# sample-project

./: .editorconfig  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: pr.yml
docker/jupyter/: Dockerfile  requirements.txt
notebooks/: example.ipynb
tests/: test_example.py
