[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
follow_imports = "silent"
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
strict_concatenate = true
warn_unreachable = true

[tool.poetry]
name = "sample-project"
version = "0.1.0"
description = "Template for Data Science Projects in Python"
authors = ["Martin Citoler Saumell <martin.citoler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^2.1.3"
polars = "^0.19.19"
statsmodels = "^0.14.0"
numpy = "^1.26.2"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
pandera = "^0.17.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.1"
ruff = "^0.1.7"
ipykernel = "^6.27.1"
pandera = {extras = ["mypy"], version = "^0.17.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
